<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:id="@+id/loginRootView"
    tools:context=".ui.activities.LaunchActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/root_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/stepikLogo"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:clickable="false"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp"

            android:contentDescription="@string/app_name"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:src="@drawable/ic_stepik_logotype_square_green" />

        <FrameLayout
            android:id="@+id/bottomButtons"
            android:layout_width="@dimen/auth_elements_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginEnd="24dp"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"

            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <Button
                android:id="@+id/signInWithSocial"
                android:text="@string/sign_in_with_social"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                style="@style/BorderLessTextButton"
                android:visibility="visible" />

            <Button
                android:id="@+id/launchSignUpButton"
                android:text="@string/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                style="@style/BorderLessTextButton"
                android:visibility="visible" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:gravity="center_horizontal"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/stepikLogo"
            app:layout_constraintBottom_toTopOf="@+id/bottomButtons"

            android:layout_marginTop="24dp">

            <TextView
                android:id="@+id/signInText"
                fontPath="fonts/Roboto-Light.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                tools:text="Sign in with e-mail"
                tools:ignore="MissingPrefix"/>

            <LinearLayout
                android:id="@+id/loginForm"
                android:layout_width="@dimen/auth_elements_width"
                android:layout_height="wrap_content"
                android:background="@drawable/login_edit_text_stroke"
                android:orientation="vertical"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="@dimen/padding_registration_left_right"
                android:layout_marginRight="@dimen/padding_registration_left_right">

                <EditText
                    android:id="@+id/loginField"
                    style="@style/LoginEditFields"
                    android:hint="@string/email"
                    android:imeOptions="flagNoFullscreen|actionNext"
                    android:inputType="textEmailAddress"/>

                <include layout="@layout/edit_text_separator" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleDrawable="@drawable/password_toggle"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/passwordField"
                        style="@style/LoginEditFields"
                        android:hint="@string/password_hint"
                        android:imeOptions="flagNoFullscreen|actionSend"
                        android:inputType="textPassword"
                        android:maxLength="@integer/max_length_of_password"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/loginErrorMessage"
                android:layout_width="@dimen/auth_elements_width"
                android:layout_height="match_parent"
                android:textColor="@color/login_error_color"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="@dimen/padding_registration_left_right"
                android:layout_marginRight="@dimen/padding_registration_left_right"
                android:textSize="16sp"
                android:gravity="center"
                android:visibility="gone"
                tools:ignore="MissingPrefix"
                fontPath="fonts/Roboto-Light.ttf"
                tools:text="Whoops! The email address and/or password you specified are not correct." />

            <Button
                android:id="@+id/loginButton"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:text="@string/sign_in"
                android:layout_marginLeft="@dimen/padding_registration_left_right"
                android:layout_marginRight="@dimen/padding_registration_left_right"

                style="@style/LoginButtons" />

            <Button
                android:id="@+id/forgotPasswordView"
                android:layout_width="@dimen/auth_elements_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textColor="@color/remind_password_button_text_color"
                style="@style/BorderLessTextButton"
                android:text="@string/remind_password" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</ScrollView>