<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/main_tab_home" />
    <item
        android:id="@+id/catalog"
        android:icon="@drawable/ic_search_menu"
        android:title="@string/main_tab_catalog" />

    <item
        android:id="@+id/profile"
        android:checkable="false"
        android:icon="@drawable/ic_profile"
        android:title="@string/main_tab_profile" />

    <item
        android:id="@+id/notifications"
        android:checkable="false"
        android:icon="@drawable/ic_mobile_notifications"
        android:title="@string/main_tab_notifications" />

    <item
        android:id="@+id/debug"
        android:checkable="false"
        android:visible="false"
        android:icon="@drawable/ic_settings_dark"
        android:title="@string/main_tab_debug"/>
</menu>