<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:viewBindingIgnore="true">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:labelVisibilityMode="labeled"
        android:layout_alignParentBottom="true"
        app:itemTextAppearanceInactive="@style/TextAppearance.AppTheme.Caption.Small"
        app:itemIconTint="@color/color_bottom_navigation_tint"
        app:itemTextColor="@color/color_bottom_navigation_tint"
        app:menu="@menu/drawer_menu" />

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/navigationView"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

</RelativeLayout>