...
            android:layout_marginBottom="0dp"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <Button
                android:id="@+id/signInWithEmail"
                android:text="@string/sign_in_with_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BorderLessTextButton"
                android:layout_gravity="start|center_vertical" />

...
